2010-10-06  Per Bothner  <per@bothner.com>

	Fix Savannah bug# 31251 "defvar", reported by Helmut Eller.
	* QuoteExp.java (SHARED_CONSTANT): New flag.
	(isSharedConstant): New method.
	(makeShared): Two new factory methods - which set SHARED_CONSTANT.
	(undefined_exp, abstractExp, voidExp, trueExp, falseExp, nullExp,
	classObjectExp): Change to allocate using makeShared.
	* InlineCalls.java (visitQuoteExp): Don't patch expression type
	if isSharedConstant is true.
	* ReferenceExp.java (getType): Check for undefined_exp.

	* Inlineable.java (getReturnType): Remove method.  Instead we have a
	default (deprecated) implementation in Procedure.
	* ApplyExp.java (getType): Update accordingly.

2010-10-05  Per Bothner  <per@bothner.com>

	* TypeValue.java (getConstructor): New abstract method.
	* InlineCalls.java (checkType): Make use type nwe convert value method.
	* InlineCalls.java (visitLetExp): Use declaration type, if specified,
	when visiting initializing expresssion.

	* Compilation.java (inlineOk): Tweak 2010-10-01 fix (to Savannah
	bug #31180) to check the nameDecl's isPublic() rather than ignorable().
	This fixes the case when the lambda is only called but not read.
	Fixes Savannah bug #31256 "Verify error".

2010-10-04  Per Bothner  <per@bothner.com>

	* QuoteExp.java (EXPLICITLY_TYPED): New flag.
	(isExplicitlyTyped, setType): New methods.
	* InlineCalls.java (checkIntValue, checkLongValue, fixIntValue,
	fixLongValue): New methods.  Based on code that was in CompileArith.
	(visitQuoteExp): New method.

2010-10-01  Per Bothner  <per@bothner.com>

	Fix Savannah bug #31180 "exception in inline-compiler".
	* Declaration.java (load): Don't try to expand in-place the LambdaExp
	of a module-level functions since that is not inlined.
	See FindCaturedvars#visitLambdaExp.
	* Compilation.java (inlineOk): However, we do want to "inline" call to
	a private module-level procedure as a method call, even when immediate.

2010-09-30  Per Bothner  <per@bothner.com>
